client/src/components/Chat/Chat.scss
.chatContainer {
    display: flex;

    .conversationLeft {
        height: calc(100vh - 61px);
        overflow: auto;
        display: flex;
        flex-direction: column;
        max-width: 300px;
        flex: 1;
        background: #546f8221;
    }
    
    .conversationRight {
        height: calc(100vh - 61px); 
        display: flex;
        flex-direction: column;
        width: 100%;
        flex: 1;
    }  
    .paginationContainer {
        bottom:0;
        position: absolute;
    }

    
    @media only screen and (max-width: 1024px) {
        .conversationLeft {
            height: calc(100vh - 121px); 
            width: 100%;
            max-width: 100%;
            flex: 100%;
        }
        .conversationRight {
            height: calc(100vh - 121px); 
            display:unset; 
            width: 100%;
        }
        .paginationContainer {
            width: 100%;
            position: unset;
        }
    }
}

